# lib/db/src/schema/index.ts
@@ -20,3 +20,4 @@
 export * from "./projects";
 export * from "./tasks";
 export * from "./sessions";
+export * from "./recordings";
